fix: flickering issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,6 +16,7 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-y: scroll;
 }
 
 body {
